[package]
name = "conveyor-ci"
description = "Conveyor CI SDK for Rust"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-nats = "0.46.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1.18"
chrono = "0.4.43"
